@@ -96,27 +96,31 @@ public class RepositoryCommandlet extends Commandlet {
       return;
     }
     this.context.debug("Repository configuration: {}", repositoryConfig);
-    Path repositoryPath = getRepositoryPath(repositoryConfig, repositoryId);
-    if (Files.isDirectory(repositoryPath.resolve(GitContext.GIT_FOLDER))) {
-      this.context.info("Repository {} already exists at {}", repositoryId, repositoryPath);
-      if (!(this.context.isForceMode() || this.context.isForceRepositories())) {
-        this.context.info("Ignoring repository {} - use --force or --force-repositories to rerun setup.", repositoryId);
-        return;
-      }
-    }
+    List<Path> repositoryPaths = getRepositoryPaths(repositoryConfig, repositoryId);
     Path ideStatusDir = this.context.getIdeHome().resolve(IdeContext.FOLDER_DOT_IDE);
     this.context.getFileAccess().mkdirs(ideStatusDir);
-    Path repositoryCreatedStatusFile = ideStatusDir.resolve("repository." + repositoryId);
-    if (Files.exists(repositoryCreatedStatusFile)) {
-      if (!(this.context.isForceMode() || this.context.isForceRepositories())) {
-        this.context.info("Ignoring repository {} because it was already setup before - use --force or --force-repositories for recreation.", repository);
-        return;
+    
+    for (Path repositoryPath : repositoryPaths) {
+      String workspaceName = getWorkspaceName(repositoryPath);
+      if (Files.isDirectory(repositoryPath.resolve(GitContext.GIT_FOLDER))) {
+        this.context.info("Repository {} already exists in workspace {} at {}", repositoryId, workspaceName, repositoryPath);
+        if (!(this.context.isForceMode() || this.context.isForceRepositories())) {
+          this.context.info("Ignoring repository {} in workspace {} - use --force or --force-repositories to rerun setup.", repositoryId, workspaceName);
+          continue;
+        }
       }
-    }
-    boolean success = cloneOrPullRepository(repositoryPath, gitUrl, repositoryCreatedStatusFile);
-    if (success) {
-      buildRepository(repositoryConfig, repositoryPath);
-      importRepository(repositoryConfig, repositoryPath, repositoryId);
+      Path repositoryCreatedStatusFile = ideStatusDir.resolve("repository." + repositoryId + "." + workspaceName);
+      if (Files.exists(repositoryCreatedStatusFile)) {
+        if (!(this.context.isForceMode() || this.context.isForceRepositories())) {
+          this.context.info("Ignoring repository {} in workspace {} because it was already setup before - use --force or --force-repositories for recreation.", repositoryId, workspaceName);
+          continue;
+        }
+      }
+      boolean success = cloneOrPullRepository(repositoryPath, gitUrl, repositoryCreatedStatusFile);
+      if (success) {
+        buildRepository(repositoryConfig, repositoryPath);
+        importRepository(repositoryConfig, repositoryPath, repositoryId);
+      }
     }
   }
 
@@ -130,17 +134,27 @@ public class RepositoryCommandlet extends Commandlet {
     });
   }
 
-  private Path getRepositoryPath(RepositoryConfig repositoryConfig, String repositoryId) {
-    String workspace = repositoryConfig.workspace();
-    if (workspace == null) {
-      workspace = IdeContext.WORKSPACE_MAIN;
+  private List<Path> getRepositoryPaths(RepositoryConfig repositoryConfig, String repositoryId) {
+    Set<String> workspaces = repositoryConfig.workspaces();
+    if (workspaces == null || workspaces.isEmpty()) {
+      workspaces = Set.of(IdeContext.WORKSPACE_MAIN);
     }
-    Path workspacePath = this.context.getIdeHome().resolve(IdeContext.FOLDER_WORKSPACES).resolve(workspace);
     String repositoryRelativePath = repositoryConfig.path();
     if (repositoryRelativePath == null) {
       repositoryRelativePath = repositoryId;
     }
-    return workspacePath.resolve(repositoryRelativePath);
+    List<Path> repositoryPaths = new java.util.ArrayList<>();
+    for (String workspace : workspaces) {
+      Path workspacePath = this.context.getIdeHome().resolve(IdeContext.FOLDER_WORKSPACES).resolve(workspace);
+      repositoryPaths.add(workspacePath.resolve(repositoryRelativePath));
+    }
+    return repositoryPaths;
+  }
+
+  private String getWorkspaceName(Path repositoryPath) {
+    Path workspacesFolder = this.context.getIdeHome().resolve(IdeContext.FOLDER_WORKSPACES);
+    Path relativePath = workspacesFolder.relativize(repositoryPath);
+    return relativePath.getName(0).toString();
   }
 
   private boolean buildRepository(RepositoryConfig repositoryConfig, Path repositoryPath) {
