@@ -12,7 +12,7 @@ import com.devonfw.tools.ide.git.GitUrl;
  *
  * @param path Path into which the project is cloned. This path is relative to the workspace.
  * @param workingSets The working sets associated with the repository.
- * @param workspace Workspace to use for checkout and import. Default is main.
+ * @param workspaces Workspaces to use for checkout and import. Supports comma-separated values. Default is main.
  * @param gitUrl Git URL to use for cloning the project.
  * @param gitBranch Git branch to checkout. Git default branch is default.
  * @param buildPath The build path for the repository.
@@ -23,7 +23,7 @@ import com.devonfw.tools.ide.git.GitUrl;
 public record RepositoryConfig(
     String path,
     String workingSets,
-    String workspace,
+    Set<String> workspaces,
     String gitUrl,
     String gitBranch,
     String buildPath,
@@ -37,7 +37,7 @@ public record RepositoryConfig(
   /** {@link RepositoryProperties#getProperty(String) Property name} for {@link #workingSets()}. */
   public static final String PROPERTY_WORKING_SETS = "workingsets";
 
-  /** {@link RepositoryProperties#getProperty(String) Property name} for {@link #workspace()}. */
+  /** {@link RepositoryProperties#getProperty(String) Property name} for {@link #workspaces()}. */
   public static final String PROPERTY_WORKSPACE = "workspace";
 
   /** {@link RepositoryProperties#getProperty(String) Property name} for {@link #gitUrl()}. */
@@ -82,9 +82,10 @@ public record RepositoryConfig(
     RepositoryProperties properties = new RepositoryProperties(filePath, context);
 
     Set<String> importsSet = properties.getImports();
+    Set<String> workspacesSet = properties.getWorkspaces();
 
     return new RepositoryConfig(properties.getProperty(PROPERTY_PATH), properties.getProperty(PROPERTY_WORKING_SETS),
-        properties.getProperty(PROPERTY_WORKSPACE), properties.getProperty(PROPERTY_GIT_URL, true), properties.getProperty(PROPERTY_GIT_BRANCH),
+        workspacesSet, properties.getProperty(PROPERTY_GIT_URL, true), properties.getProperty(PROPERTY_GIT_BRANCH),
         properties.getProperty(PROPERTY_BUILD_PATH), properties.getProperty(PROPERTY_BUILD_CMD), importsSet,
         parseBoolean(properties.getProperty(PROPERTY_ACTIVE).trim()));
   }
